# write-like-me

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
adapters/cursor/: hooks.json
adapters/gemini/: gemini-extension.json
adapters/gemini/hooks/: hooks.json
adapters/gemini/scripts/: capture-prompt.sh
adapters/gemini/skills/write-like-me/: SKILL.md
adapters/opencode/: write-like-me.js
adapters/universal/: WRITE_LIKE_ME.md
docs/: ARCHITECTURE.md  PRIVACY.md
plugins/write-like-me/.claude-plugin/: plugin.json
plugins/write-like-me/.codex-plugin/: plugin.json
plugins/write-like-me/.cursor-plugin/: plugin.json
plugins/write-like-me/hooks/: hooks.json
plugins/write-like-me/scripts/: capture-prompt.sh
plugins/write-like-me/skills/write-like-me/: SKILL.md
plugins/write-like-me/skills/write-like-me/agents/: openai.yaml
scripts/: __init__.py  install.py
src/write_like_me/: __init__.py  analyze.py  capture.py  cli.py  config.py  hooks.py  paths.py  privacy.py  storage.py
tests/: test_analyze.py  test_capture.py  test_cli.py  test_hooks.py  test_install.py
