[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "write-like-me-agent"
version = "0.1.0"
description = "Local-first writing voice memory for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Benny Jiang" }]
keywords = ["ai-agents", "writing-style", "codex", "claude-code", "opencode"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
wlm = "write_like_me.cli:main"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8"]

[project.urls]
Homepage = "https://github.com/bennyjiang/write-like-me"
Repository = "https://github.com/bennyjiang/write-like-me"
Issues = "https://github.com/bennyjiang/write-like-me/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/write_like_me"]

[tool.pytest.ini_options]
testpaths = ["tests"]
